added console project

--- a/ManVsCars/ManVsCars.csproj
+++ b/ManVsCars/ManVsCars.csproj
@@ -15,7 +15,7 @@
     <RootNamespace>ManVsCars</RootNamespace>
     <AssemblyName>ManVsCars</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
-    <UseIISExpress>false</UseIISExpress>
+    <UseIISExpress>true</UseIISExpress>
     <Use64BitIISExpress />
     <IISExpressSSLPort />
     <IISExpressAnonymousAuthentication />
@@ -134,7 +134,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>49979</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost/ManVsCars</IISUrl>
+          <IISUrl>http://localhost:49979/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
